--- a/index.html
+++ b/index.html
@@ -6,35 +6,32 @@
         <meta name="description" content="The portfolio of web developer Robert James.">
         <meta name="viewport" content="width=device-width">
         <link rel="stylesheet" href="stylesheets/style.css">
-        <link rel="stylesheet" href="stylesheets/nivo-slider.css">
         <script src="http://use.edgefonts.net/source-sans-pro:n2,i2,n3,i3,n4,i4,n6,i6:all.js"></script> 
     </head>
     <body>
       <div class="main">
         <header>
-            <h1>ROBERT JAMES</h1>
-            <nav>
-               <ul>
-                  <li><a href="#work">work</a></li>
-                  <li><a href="#contact">contact</a></li>
-                </ul>
-            </nav>
+          <nav>
+            <ul>
+              <li><a href="http://robertjames.cc"><h1>ROBERT JAMES</h1></a></li>
+              <li><a href="#contact">contact</a></li>
+              <li id="btn"><a href="#">work</a></li>
+            </ul>
+          </nav>
         </header>
-            <section id="work" class="work">
+            <section id="work" class="work gn">
              <h2>Work</h2>
-             <div id="slider" class="nivoSlider">
-                <a href="http://codepen.io/rmjames">
-                <img src="images/codePenBlack-Large.png" data-thumb="images/up.jpg" alt="" title="This is an example of a caption" /></a>
-                <a href="http://rjames-sch.jit.su/">
-                <img src="images/nodeJitsu-logo.png" data-thumb="images/walle.jpg" alt="" data-transition="slideInLeft" /></a>
+             <div id="work">
+             <li><a href="http://codepen.io/rmjames">CODEPEN</a></li>
+             <li><a href="http://rjames-sch.jit.su/">SCHEDULE</a></li>
              </div>
              </section>
              <section class="tweets">
                <a class="twitter-timeline" href="https://twitter.com/bkrjames" data-widget-id="373528509047508992" data-chrome="nofooter noheader noborders transparent" data-tweet-limit="5">Tweets by @bkrjames</a>
              </section>
-             <section id="contact" class="contact">
+             <section class="contact">
                <h2>Contact</h2>
-                  <nav class="icon">
+                  <nav>
                     <ul>
                       <li><a data-icon="&#x25;" href="http://www.linkedin.com/in/robertmajames/"></a></li>
                       <li><a data-icon="&#x24;" href="https://twitter.com/bkrjames"></a></li>
@@ -48,8 +45,6 @@
         </footer>
        </div><!--main-->
       <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
-      <script type="text/javascript" src="javascripts/jquery-1.9.0.min.js"></script>
-      <script type="text/javascript" src="javascripts/jquery.nivo.slider.js"></script>
       <script type="text/javascript" src="javascripts/main.js"></script>
       <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
     </body>
