--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
              <section class="tweets">
                <a class="twitter-timeline" href="https://twitter.com/bkrjames" data-widget-id="373528509047508992" data-chrome="nofooter noheader noborders transparent" data-tweet-limit="5">Tweets by @bkrjames</a>
              </section>
-             <section class="contact">
+             <section id="contact" class="contact">
                <h2>Contact</h2>
                   <nav>
                     <ul>
