--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
               <li><a href="#contact">contact</a></li>
           </ul>
         </nav>        
-        <header role="header">
+        <header class="header"role="header">
           <h1 class="logo"><a href="http://robertjames.cc">ROBERT JAMES</a></h1>
           <nav class="nav-top">
             <a href="#nav-toggle" class="nav-toggle"></a>
