--- a/app/index.html
+++ b/app/index.html
@@ -25,7 +25,7 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
     <div class="main">
-        <nav role="navigation">
+        <nav id="top">
             <ul class="nav-top">
                 <li><a href="#about">about</a></li>
                 <li><a href="#services">services</a></li>
@@ -63,6 +63,7 @@
                   <a class='line' href="mailto:rma.james@gmail.com">drop a line</a>
                 </p>
         </section>
+        <div class="toTop"><a href="#top"></a></div>
     <footer>
         <nav class="contact">
             <ul>
