--- a/app/index.html
+++ b/app/index.html
@@ -46,8 +46,9 @@
             <h2>Services</h2>
                 <article class="design">
                     <h3>front end development</h3>
+                    <div><img src="images/design.jpg"></div>
+                    <p>I engineer designs that are performant and scalable.</p>
                 </article>
-                <p>I design and create clean functional designs</p>
         </section>    
         <section id="work" class="work ">
             <h2>work</h2>
