--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>Robert James</title>
         <meta name="description" content="The portfolio of web developer Robert James.">
         <meta name="viewport" content="width=device-width">
+        <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
         <link rel="stylesheet" href="stylesheets/style.css">
     </head>
     <body>
