--- a/app/index.html
+++ b/app/index.html
@@ -41,11 +41,15 @@
             </nav>
         </header>
         <section id="about" class='about'>
-            <h2>about</h2>
+            <section class='about-2'>
+                <section class='about-3'>
+                    <h2>about</h2>
+                </section>
+            </section>
         </section>
         <section id="services">
             <h2>Services</h2>
-                <article class="design">
+                <article class="design service">
                     <h3>front end development</h3>
                     <div><i class="fa fa-code fa-5x"></i></div>
                     <p>I make designs that are performant and scalable.</p>
