--- a/app/index.html
+++ b/app/index.html
@@ -40,13 +40,7 @@
                 <a href="#" class="nav-toggle"></a>
             </nav>
         </header>
-        <section id="about" class='about'>
-            <section class='about-2'>
-                <section class='about-3'>
-                    <h2>about</h2>
-                </section>
-            </section>
-        </section>
+        <section id="about" class='about'></section>
         <section id="services">
             <h2>Services</h2>
                 <article class="design service">
@@ -57,16 +51,17 @@
         </section>    
         <section id="work" class="work ">
             <h2>work</h2>
-                <div id="work">
-                    <li class="calc" ><a href="http://cdpn.io/mcgte"> calculator</a></li>
-                    <li class="sched"><a href="http://dev-toolkit.herokuapp.com/"> schedule</a></li>
-                </div>
+                <ul>
+                    <li><a href="http://cdpn.io/mcgte">calculator</a></li>
+                    <li><a href="http://dev-toolkit.herokuapp.com/">schedule</a></li>
+                </ul>
+
         </section> 
         <section id="contact">
             <h2 data-scroll-reveal>contact</h2>
-                <p>For any inqueries please drop a line</p>
+                <p>For any inqueries </p>
                   <button class='button'>
-                      <a href="mailto:rma.james@gmail.com">contact</a>
+                      <a href="mailto:rma.james@gmail.com">drop a line</a>
                 </button>
                
         </section>
