--- a/app/index.html
+++ b/app/index.html
@@ -49,7 +49,7 @@
         <section id="work" class=" section">
             <h2>work</h2>
                 <article class="section-portfolio">
-                    <ul class="work">
+                    <ul class="cf work">
                         <li><a href="http://cdpn.io/mcgte">calculator</a></li>
                         <li><a href="http://dev-toolkit.herokuapp.com/">schedule</a></li>
                     </ul>
