--- a/index.html
+++ b/index.html
@@ -1,251 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8">
-    <meta name="robots" content="noindex">
-    <meta name="theme-color" content="#6285a9">
-    <meta name="viewport" content="width=device-width">
-    <title>Robert James</title>
-    <style>
-      :root {
-        --color-link: #4080a0;
-        --color-link--hover: #83b5ce;
-        --font-color: rgba(31, 31, 31, 0.9);
-        --font-size: calc(1vw + 1vh + .77vmin);
-        --font-stack--1: Verdana,Geneva,sans-serif;
-        --text-shadow: rgba(213, 148, 83, 0.66);
-        --link-ease: cubic-bezier(0.01, 0.93, 0.9, 1.02);
-        --link-timing: 444ms;
-        }
-
-        * {
-            box-sizing: border-box;
-            margin-top: 1em;
-        }
-        body {
-            line-height: 1.4;
-            color: var(--font-color);
-            font-family: var(--font-stack--1);
-            font-size: var(--font-size);
-            letter-spacing: .01em;
-            padding: .1em .3em;
-            height: 100%;
-        }
-        @media (min-width: 500px) {
-            body { font-size: 14px; }
-        }
-        header { text-align: center; }
-        h1 a {
-            color: var(--font-color);
-            text-decoration: none;
-            text-shadow: 0 0 1px var(--text-shadow);
-        }
-        nav,
-        main {
-            display: -webkit-box;
-            display: -webkit-flex;
-            display: -ms-flexbox;
-            display: flex;
-            -webkit-box-pack: center;
-            -webkit-justify-content: center;
-                -ms-flex-pack: center;
-                    justify-content: center;
-            -webkit-box-align: center;
-            -webkit-align-items: center;
-                -ms-flex-align: center;
-                    align-items: center;
-            -webkit-flex-wrap: wrap;
-                -ms-flex-wrap: wrap;
-                    flex-wrap: wrap;
-            margin: 1em;
-        }
-        main {
-            -webkit-transition: all 3s;
-            transition: all 3s;
-        }
-        main ul { padding-left: 0; }
-        main li { list-style: none; }
-        main li a { text-decoration: none; }
-        main > *:not(:target) {
-            -webkit-transition: all 3s;
-            transition: all 3s;
-            display: none;
-            opacity: 0;
-        }
-
-        a { color: var(--color-link); }
-
-        a:target,
-        p:first-letter {
-            font-weight: 600;
-            font-size: 133%;
-            padding-left: .5em;
-            padding-right: .01em;
-            letter-spacing: .02em;
-        }
-        .index { display: none; }
-        .block {
-            position: relative;
-            -webkit-box-flex: 0;
-            -webkit-flex: 0 1 3em;
-                -ms-flex: 0 1 3em;
-                    flex: 0 1 3em;
-            margin: 2.25em;
-            padding: 1.5em 2.5em;
-            background: #5eabed;
-            color: #fff;
-            text-decoration: none;
-            box-shadow: 0 0 2px slategrey;
-        }
-        .block:after {
-            content: '';
-            position: absolute;
-            -webkit-transform: translate(-40%, -10%);
-                    transform: translate(-40%, -10%);
-            padding: 2.3em 3.3em;
-            mix-blend-mode: lighten;
-            background: rgba(231, 132, 19, 0.15);
-            -webkit-transition: all var(--link-ease) var(--link-timing);
-            transition: all var(--link-ease) var(--link-timing);
-        }
-        .block:hover:after {
-            -webkit-transform: translate(-110%, -60%);
-                    transform: translate(-110%, -60%);
-        }
-        .block:before {
-            content: '';
-            position: absolute;
-            -webkit-transform: translate(-55%, -55%);
-                    transform: translate(-55%, -55%);
-            padding: 2.3em 3.3em;
-            mix-blend-mode: lighten;
-            background: rgba(103, 183, 224, 0.15);
-            -webkit-transition: all var(--link-ease) var(--link-timing);
-            transition: all var(--link-ease) var(--link-timing);
-        }
-        .block:hover:before {
-            -webkit-transform: translate(10%, 10%);
-                    transform: translate(10%, 10%);
-        }
-        .footer-menu {
-            display: -webkit-box;
-            display: -webkit-flex;
-            display: -ms-flexbox;
-            display: flex;
-            -webkit-flex-wrap: wrap;
-                -ms-flex-wrap: wrap;
-                    flex-wrap: wrap;
-            max-width: 75vw;
-            margin: 1em auto 1em;
-        }
-        .footer-menu--item {
-            display: -webkit-box;
-            display: -webkit-flex;
-            display: -ms-flexbox;
-            display: flex;
-            -webkit-box-pack: center;
-            -webkit-justify-content: center;
-                -ms-flex-pack: center;
-                    justify-content: center;
-            -webkit-box-flex: 1;
-            -webkit-flex: 1;
-                -ms-flex: 1;
-                    flex: 1;
-        }
-        .footer-menu--item a {
-            padding: .8em;
-            fill: var(--color-link);
-            -webkit-filter: drop-shadow(0.33px 0.33px 0.66px red);
-                    filter: drop-shadow(0.33px 0.33px 0.66px red);
-            -webkit-transition: fill 330ms;
-            transition: fill 330ms;
-        }
-        .footer-menu--item a.twitter:hover {
-            fill: #1ca0f2;
-            -webkit-filter: drop-shadow(1px 1px 1px #777);
-                    filter: drop-shadow(1px 1px 1px #777);
-        }
-        .footer-menu--item a.linkedIn:hover {
-        fill: #0070a8;
-            -webkit-filter: drop-shadow(1px 1px 1px #777);
-                    filter: drop-shadow(1px 1px 1px #777);
-        }
-        .footer-menu--item a.github:hover {
-            fill: #333333;
-            -webkit-filter: drop-shadow(1px 1px 1px #777);
-                    filter: drop-shadow(1px 1px 1px #777);
-        }
-        .footer-menu--item a.email:hover {
-            fill: #fb805b;
-            -webkit-filter: drop-shadow(1px 1px 1px #777);
-                    filter: drop-shadow(1px 1px 1px #777);
-        }
-        #about:target {
-            opacity: 1;
-            max-width: 20em;
-        }
-    </style>  
-  </head>
-<body>
-<svg class="index">
-  <symbol id="twitter">
-    <path d="M22.46,6C21.69,6.35 20.86,6.58 20,6.69C20.88,6.16 21.56,5.32 21.88,4.31C21.05,4.81 20.13,5.16 19.16,5.36C18.37,4.5 17.26,4 16,4C13.65,4 11.73,5.92 11.73,8.29C11.73,8.63 11.77,8.96 11.84,9.27C8.28,9.09 5.11,7.38 3,4.79C2.63,5.42 2.42,6.16 2.42,6.94C2.42,8.43 3.17,9.75 4.33,10.5C3.62,10.5 2.96,10.3 2.38,10C2.38,10 2.38,10 2.38,10.03C2.38,12.11 3.86,13.85 5.82,14.24C5.46,14.34 5.08,14.39   4.69,14.39C4.42,14.39 4.15,14.36 3.89,14.31C4.43,16 6,17.26 7.89,17.29C6.43,18.45 4.58,19.13 2.56,19.13C2.22,19.13 1.88,19.11 1.54,19.07C3.44,20.29 5.7,21 8.12,21C16,21 20.33,14.46 20.33,8.79C20.33,8.6 20.33,8.42 20.32,8.23C21.16,7.63 21.88,6.87 22.46,6Z"></path>
-  </symbol>
-  <symbol id="linkedIn">
-    <path d="M21,21H17V14.25C17,13.19 15.81,12.31 14.75,12.31C13.69,12.31 13,13.19 13,14.25V21H9V9H13V11C13.66,9.93 15.36,9.24 16.5,9.24C19,9.24 21,11.28 21,13.75V21M7,21H3V9H7V21M5,3A2,2 0 0,1 7,5A2,2 0 0,1 5,7A2,2 0 0,1 3,5A2,2 0 0,1 5,3Z"></path>
-  </symbol>
-  <symbol id="github">
-    <path d="M12,2A10,10 0 0,0 2,12C2,16.42 4.87,20.17 8.84,21.5C9.34,21.58 9.5,21.27 9.5,21C9.5,20.77 9.5,20.14 9.5,19.31C6.73,19.91 6.14,17.97 6.14,17.97C5.68,16.81 5.03,16.5 5.03,16.5C4.12,15.88 5.1,15.9 5.1,15.9C6.1,15.97 6.63,16.93 6.63,16.93C7.5,18.45 8.97,18 9.54,17.76C9.63,17.11 9.89,16.67 10.17,16.42C7.95,16.17 5.62,15.31 5.62,11.5C5.62,10.39 6,9.5 6.65,8.79C6.55,8.54 6.2,7.5 6.75,6.15C6.75,6.15 7.59,5.88 9.5,7.17C10.29,6.95 11.15,6.84 12,6.84C12.85,6.84 13.71,6.95 14.5,7.17C16.41,5.88 17.25,6.15 17.25,6.15C17.8,7.5 17.45,8.54 17.35,8.79C18,9.5 18.38,10.39 18.38,11.5C18.38,15.32 16.04,16.16 13.81,16.41C14.17,16.72 14.5,17.33 14.5,18.26C14.5,19.6 14.5,20.68 14.5,21C14.5,21.27 14.66,21.59 15.17,21.5C19.14,20.16 22,16.42 22,12A10,10 0 0,0 12,2Z"></path>
-  </symbol>
-  <symbol id="email">
-    <path d="M20,4H4A2,2 0 0,0 2,6V18A2,2 0 0,0 4,20H20A2,2 0 0,0 22,18V6A2,2 0 0,0 20,4M20,18H4V8L12,13L20,8V18M20,6L12,11L4,6V6H20V6Z"></path>
-  </symbol>
-</svg>
-<header> 
-  <h1> <a href="#"> 
-      <text x="0" y="66">Robert James</text></a></h1>
-</header>
-<nav> <a href="#about" class="block">About</a><a href="#writting" class="block">Writing</a><a href="#random" class="block">Random</a><a href="#experiments" class="block">Experiments</a></nav>
-<main>
-  <div id="about">
-    <p>I came from a networking hardware background building systems and supporting users. Where the emphasis is to build a hardened robust and scalable system. In the support role patterns and concerns revealed themselves from the end users.  </p>
-    <p>Now as a web developer I builds websites and applications where the emphasis is to build insightful, robust and scalable systems; also considering the plights and concerns of the user in the system design.  Yielding in a product that is provides system performance and great user experience. </p>
-  </div>
-  <div id="writting">
-    <ul>
-      <li><a href="#">Writting Soon to come</a></li>
-    </ul>
-  </div>
-  <div id="random">
-    <ul>
-      <li><a href="#">Wait for the Random Ish</a></li>
-      <li><a href="#">second  link</a></li>
-    </ul>
-  </div>
-  <div id="experiments">
-    <ul>
-      <li><a href="#">Experiments in the works</a></li>
-      <li><a href="#">second  link</a></li>
-    </ul>
-  </div>
-</main>
-<footer class="footer-menu">
-  <li class="footer-menu--item"><a href="https://twitter.com/bkrjames" class="twitter">
-      <svg style="width:2em;height:2em" viewBox="0 0 24 24">
-        <use xlink:href="#twitter"></use>
-      </svg></a></li>
-  <li class="footer-menu--item"><a href="https://www.linkedin.com/in/robertmajames" class="linkedIn"> 
-      <svg style="width:2em;height:2em" viewBox="0 0 24 24">
-        <use xlink:href="#linkedIn"></use>
-      </svg></a></li>
-  <li class="footer-menu--item"><a href="https://github.com/rmjames" class="github">
-      <svg style="width:2em;height:2em" viewBox="0 0 24 24">
-        <use xlink:href="#github"></use>
-      </svg></a></li>
-  <li class="footer-menu--item"><a href="mailto:rma.jame@gmail.com" class="email">
-      <svg style="width:2em;height:2em" viewBox="0 0 24 24">
-        <use xlink:href="#email"></use>
-      </svg></a></li>
-</footer>
-  </body>
-</html>
+<!DOCTYPE html><html> <head> <meta charset="UTF-8"> <meta name="robots" content="noindex"> <meta name="theme-color" content="#6285a9"> <meta name="viewport" content="width=device-width"> <title>Robert James</title> <style>:root{--color-link: #4080a0; --color-link--hover: #83b5ce; --font-color: rgba(31, 31, 31, 0.9); --font-size: calc(1vw + 1vh + .77vmin); --font-stack--1: Verdana,Geneva,sans-serif; --text-shadow: rgba(213, 148, 83, 0.66); --link-ease: cubic-bezier(0.01, 0.93, 0.9, 1.02); --link-timing: 444ms;}*{box-sizing: border-box; margin-top: 1em;}body{line-height: 1.4; color: var(--font-color); font-family: var(--font-stack--1); font-size: var(--font-size); letter-spacing: .01em; padding: .1em .3em; height: 100%;}@media (min-width: 500px){body{font-size: 14px;}}header{text-align: center;}h1 a{color: var(--font-color); text-decoration: none; text-shadow: 0 0 1px var(--text-shadow);}nav, main{display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -webkit-justify-content: center; -ms-flex-pack: center; justify-content: center; -webkit-box-align: center; -webkit-align-items: center; -ms-flex-align: center; align-items: center; -webkit-flex-wrap: wrap; -ms-flex-wrap: wrap; flex-wrap: wrap; margin: 1em;}main{-webkit-transition: all 3s; transition: all 3s;}main ul{padding-left: 0;}main li{list-style: none;}main li a{text-decoration: none;}main > *:not(:target){-webkit-transition: all 3s; transition: all 3s; display: none; opacity: 0;}a{color: var(--color-link);}a:target, p:first-letter{font-weight: 600; font-size: 133%; padding-left: .5em; padding-right: .01em; letter-spacing: .02em;}.index{display: none;}.block{position: relative; -webkit-box-flex: 0; -webkit-flex: 0 1 3em; -ms-flex: 0 1 3em; flex: 0 1 3em; margin: 2.25em; padding: 1.5em 2.5em; background: #5eabed; color: #fff; text-decoration: none; box-shadow: 0 0 2px slategrey;}.block:after{content: ''; position: absolute; -webkit-transform: translate(-40%, -10%); transform: translate(-40%, -10%); padding: 2.3em 3.3em; mix-blend-mode: lighten; background: rgba(231, 132, 19, 0.15); -webkit-transition: all var(--link-ease) var(--link-timing); transition: all var(--link-ease) var(--link-timing);}.block:hover:after{-webkit-transform: translate(-110%, -60%); transform: translate(-110%, -60%);}.block:before{content: ''; position: absolute; -webkit-transform: translate(-55%, -55%); transform: translate(-55%, -55%); padding: 2.3em 3.3em; mix-blend-mode: lighten; background: rgba(103, 183, 224, 0.15); -webkit-transition: all var(--link-ease) var(--link-timing); transition: all var(--link-ease) var(--link-timing);}.block:hover:before{-webkit-transform: translate(10%, 10%); transform: translate(10%, 10%);}.footer-menu{display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-flex-wrap: wrap; -ms-flex-wrap: wrap; flex-wrap: wrap; max-width: 75vw; margin: 1em auto 1em;}.footer-menu--item{display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -webkit-justify-content: center; -ms-flex-pack: center; justify-content: center; -webkit-box-flex: 1; -webkit-flex: 1; -ms-flex: 1; flex: 1;}.footer-menu--item a{padding: .8em; fill: var(--color-link); -webkit-filter: drop-shadow(0.33px 0.33px 0.66px red); filter: drop-shadow(0.33px 0.33px 0.66px red); -webkit-transition: fill 330ms; transition: fill 330ms;}.footer-menu--item a.twitter:hover{fill: #1ca0f2; -webkit-filter: drop-shadow(1px 1px 1px #777); filter: drop-shadow(1px 1px 1px #777);}.footer-menu--item a.linkedIn:hover{fill: #0070a8; -webkit-filter: drop-shadow(1px 1px 1px #777); filter: drop-shadow(1px 1px 1px #777);}.footer-menu--item a.github:hover{fill: #333333; -webkit-filter: drop-shadow(1px 1px 1px #777); filter: drop-shadow(1px 1px 1px #777);}.footer-menu--item a.email:hover{fill: #fb805b; -webkit-filter: drop-shadow(1px 1px 1px #777); filter: drop-shadow(1px 1px 1px #777);}#about:target{opacity: 1; max-width: 20em;}</style> </head><body><svg class="index"> <symbol id="twitter"> <path d="M22.46,6C21.69,6.35 20.86,6.58 20,6.69C20.88,6.16 21.56,5.32 21.88,4.31C21.05,4.81 20.13,5.16 19.16,5.36C18.37,4.5 17.26,4 16,4C13.65,4 11.73,5.92 11.73,8.29C11.73,8.63 11.77,8.96 11.84,9.27C8.28,9.09 5.11,7.38 3,4.79C2.63,5.42 2.42,6.16 2.42,6.94C2.42,8.43 3.17,9.75 4.33,10.5C3.62,10.5 2.96,10.3 2.38,10C2.38,10 2.38,10 2.38,10.03C2.38,12.11 3.86,13.85 5.82,14.24C5.46,14.34 5.08,14.39 4.69,14.39C4.42,14.39 4.15,14.36 3.89,14.31C4.43,16 6,17.26 7.89,17.29C6.43,18.45 4.58,19.13 2.56,19.13C2.22,19.13 1.88,19.11 1.54,19.07C3.44,20.29 5.7,21 8.12,21C16,21 20.33,14.46 20.33,8.79C20.33,8.6 20.33,8.42 20.32,8.23C21.16,7.63 21.88,6.87 22.46,6Z"></path> </symbol> <symbol id="linkedIn"> <path d="M21,21H17V14.25C17,13.19 15.81,12.31 14.75,12.31C13.69,12.31 13,13.19 13,14.25V21H9V9H13V11C13.66,9.93 15.36,9.24 16.5,9.24C19,9.24 21,11.28 21,13.75V21M7,21H3V9H7V21M5,3A2,2 0 0,1 7,5A2,2 0 0,1 5,7A2,2 0 0,1 3,5A2,2 0 0,1 5,3Z"></path> </symbol> <symbol id="github"> <path d="M12,2A10,10 0 0,0 2,12C2,16.42 4.87,20.17 8.84,21.5C9.34,21.58 9.5,21.27 9.5,21C9.5,20.77 9.5,20.14 9.5,19.31C6.73,19.91 6.14,17.97 6.14,17.97C5.68,16.81 5.03,16.5 5.03,16.5C4.12,15.88 5.1,15.9 5.1,15.9C6.1,15.97 6.63,16.93 6.63,16.93C7.5,18.45 8.97,18 9.54,17.76C9.63,17.11 9.89,16.67 10.17,16.42C7.95,16.17 5.62,15.31 5.62,11.5C5.62,10.39 6,9.5 6.65,8.79C6.55,8.54 6.2,7.5 6.75,6.15C6.75,6.15 7.59,5.88 9.5,7.17C10.29,6.95 11.15,6.84 12,6.84C12.85,6.84 13.71,6.95 14.5,7.17C16.41,5.88 17.25,6.15 17.25,6.15C17.8,7.5 17.45,8.54 17.35,8.79C18,9.5 18.38,10.39 18.38,11.5C18.38,15.32 16.04,16.16 13.81,16.41C14.17,16.72 14.5,17.33 14.5,18.26C14.5,19.6 14.5,20.68 14.5,21C14.5,21.27 14.66,21.59 15.17,21.5C19.14,20.16 22,16.42 22,12A10,10 0 0,0 12,2Z"></path> </symbol> <symbol id="email"> <path d="M20,4H4A2,2 0 0,0 2,6V18A2,2 0 0,0 4,20H20A2,2 0 0,0 22,18V6A2,2 0 0,0 20,4M20,18H4V8L12,13L20,8V18M20,6L12,11L4,6V6H20V6Z"></path> </symbol></svg><header> <h1> <a href="#"> <text x="0" y="66">Robert James</text></a></h1></header><nav> <a href="#about" class="block">About</a><a href="#writting" class="block">Writing</a><a href="#random" class="block">Random</a><a href="#experiments" class="block">Experiments</a></nav><main> <div id="about"> <p>I came from a networking hardware background building systems and supporting users. Where the emphasis is to build a hardened robust and scalable system. In the support role patterns and concerns revealed themselves from the end users. </p><p>Now as a web developer I builds websites and applications where the emphasis is to build insightful, robust and scalable systems; also considering the plights and concerns of the user in the system design. Yielding in a product that is provides system performance and great user experience. </p></div><div id="writting"> <ul> <li><a href="#">Writting Soon to come</a></li></ul> </div><div id="random"> <ul> <li><a href="#">Wait for the Random Ish</a></li><li><a href="#">second link</a></li></ul> </div><div id="experiments"> <ul> <li><a href="#">Experiments in the works</a></li><li><a href="#">second link</a></li></ul> </div></main><footer class="footer-menu"> <li class="footer-menu--item"><a href="https://twitter.com/bkrjames" class="twitter"> <svg style="width:2em;height:2em" viewBox="0 0 24 24"> <use xlink:href="#twitter"></use> </svg></a></li><li class="footer-menu--item"><a href="https://www.linkedin.com/in/robertmajames" class="linkedIn"> <svg style="width:2em;height:2em" viewBox="0 0 24 24"> <use xlink:href="#linkedIn"></use> </svg></a></li><li class="footer-menu--item"><a href="https://github.com/rmjames" class="github"> <svg style="width:2em;height:2em" viewBox="0 0 24 24"> <use xlink:href="#github"></use> </svg></a></li><li class="footer-menu--item"><a href="mailto:rma.jame@gmail.com" class="email"> <svg style="width:2em;height:2em" viewBox="0 0 24 24"> <use xlink:href="#email"></use> </svg></a></li></footer> </body></html>
