change to structure

--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
     <meta name="theme-color" content="#6285a9">
     <meta name="viewport" content="width=device-width">
     <title>Robert James</title>
-    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="dist/css/main.css">
   </head>
   <body>
     <svg class="index">
@@ -68,6 +68,6 @@
             <use xlink:href="#email"></use>
           </svg></a></li>
     </footer>
-    <script src='scripts/main.js'></script>
+    <script src='dist/js/main.js'></script>
   </body>
 </html>
