add make and update pattern-library

--- a/index.html
+++ b/index.html
@@ -68,14 +68,16 @@
       <div id="about">
         <p class='about-item onEnter' style='--delay: .32s' tabindex="0" >I'm a UX Engineer based out of Brooklyn NY, looking to design and build digital experiences and products.</p>
         <p class='about-item onEnter' style='--delay: .36s' tabindex="0" >I have worked on digital products for 
-          <span class='brand'>SBE</span> <span>&sdot;</span>
-          <span class='brand'>Guardian</span> <span>&sdot;</span>
-          <span class='brand'>MacMillan</span> <span>&sdot;</span>
-          <span class='brand'>Weber Shandwick</span> <span>&sdot;</span>
-          <span class='brand'>Royal Caribbean</span> <span>&sdot;</span>
-          <span class='brand'>Microsoft</span> <span>&sdot;</span>
-          <span class='brand'>Bank of America</span> <span>&sdot;</span>
-          <span class='brand'>Corteva</span>.
+          <span class="'brands">
+            <span class='brand'>SBE</span> <span>&sdot;</span>
+            <span class='brand'>Guardian</span> <span>&sdot;</span>
+            <span class='brand'>MacMillan</span> <span>&sdot;</span>
+            <span class='brand'>Weber Shandwick</span> <span>&sdot;</span>
+            <span class='brand'>Royal Caribbean</span> <span>&sdot;</span>
+            <span class='brand'>Microsoft</span> <span>&sdot;</span>
+            <span class='brand'>Bank of America</span> <span>&sdot;</span>
+            <span class='brand'>Corteva</span>.
+          </span>
         </p>
         <p class='about-item onEnter' style='--delay: .40s' tabindex="0" >If you need to get in <a aria-labelledby='contact' id='contact' class='link-contact' href="mailto:rma.james@gmail.com?Subject=Inquiry">contact</a> feel free to reach out.</p>
       </div>
