--- a/pattern-library.html
+++ b/pattern-library.html
@@ -37,7 +37,9 @@
     <link rel="manifest" href="manifest.json">
   </head>
   <body>
-    <h1 class='txt-cntr'>Pattern Library</h1>
+    <header class="header">
+      <h1 class='txt-cntr'>Pattern Library</h1>
+    </header>
     <section class='styleguide'>
       <article>
         <h2>Text colors</h2>
