--- a/pattern-library.html
+++ b/pattern-library.html
@@ -24,10 +24,10 @@
     <meta property="og:site_name" content="Robert James"/>
     <meta name="twitter:card" content="summary_large_image"/>
     <meta name="twitter:image:alt" content="Robert James"/>
-    <link rel="preload" href="build/main.css" as="style">
+    <link rel="preload" href="styles/main.css" as="style">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Inter:wght@324;586;624;861&display=swap" as="style">
-    <link rel="stylesheet" href="build/main.css">
+    <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@324;586;624;861&display=swap">
     <link rel="icon" type="image/svg+xml" href="images/icon.svg">
     <link rel="apple-touch-icon" href="/images/icon-ios.svg">
