--- a/index.html
+++ b/index.html
@@ -64,8 +64,7 @@
     <header class="header">
       <h1 tabindex="0">robert james</h1>
     </header>
-      <main>
-      <div id="about">
+      <main id="about">
         <p class='about-item onEnter' style='--delay: .32s' tabindex="0" >I'm a UX Engineer based out of Brooklyn NY, looking to design and build digital experiences and products.</p>
         <p class='about-item onEnter' style='--delay: .36s' tabindex="0" >I have worked on digital products for 
           <span class="'brands">
@@ -80,7 +79,6 @@
           </span>
         </p>
         <p class='about-item onEnter' style='--delay: .40s' tabindex="0" >If you need to get in <a aria-labelledby='contact' id='contact' class='link-contact' href="mailto:rma.james@gmail.com?Subject=Inquiry">contact</a> feel free to reach out.</p>
-      </div>
     </main>
     <footer class="footer-menu">
       <ul>
