--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@324;586;624;861&display=swap">
     <link rel="icon" type="image/svg+xml" href="images/icon.svg">
     <link rel="apple-touch-icon" href="/images/icon-ios.svg">
-    <link rel="icon" type="image/png" href="/favicon-144.png" sizes="144x144">
-    <link rel="icon" type="image/png" href="/favicon-512.png" sizes="512x512">
-    <link rel="icon" type="image/png" href="/favicon-192.png" sizes="192x192">
+    <link rel="icon" type="image/png" href="/favicon_144.png" sizes="144x144">
+    <link rel="icon" type="image/png" href="/favicon_512.png" sizes="512x512">
+    <link rel="icon" type="image/png" href="/favicon_192.png" sizes="192x192">
     <link rel="manifest" href="manifest.json">
   </head>
   <body>
