--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <span class='brand'>Corteva</span>.
           </span>
         </p>
-        <p class='about-item onEnter' style='--delay: .40s' tabindex="0" >If you need to get in <a aria-labelledby='contact' id='contact' class='link-contact' href="mailto:rma.james@gmail.com?Subject=Inquiry">contact</a> feel free to reach out.</p>
+        <p class='about-item onEnter' style='--delay: .40s' tabindex="0" >If you need to get in <a aria-labelledby='contact' id='contact' class='link-contact' href="mailto:contact@robertjames.nyc?Subject=Inquiry">contact</a> feel free to reach out.</p>
     </main>
     <footer class="footer-menu">
       <ul>
