--- a/index.html
+++ b/index.html
@@ -29,9 +29,10 @@
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Recursive:wght,CASL,CRSV,MONO@300..1000,0..1,0..1,0..1&display=swap">
     <link rel="stylesheet" href="styles/main.css">
     <link href="https://fonts.googleapis.com/css2?family=Recursive:wght,CASL,CRSV,MONO@300..1000,0..1,0..1,0..1&display=swap" rel="stylesheet"> 
-    <link rel="icon" type="image/svg+xml" href="images/icon.svg">
+    <link rel="icon" type="image/svg+xml" href="images/favicon.svg">
     <link rel="apple-touch-icon" href="/images/icon-ios.svg">
     <link rel="icon" type="image/png" href="/favicon_144.png" sizes="144x144">
+    <link rel="icon" type="image/png" href="/favicon.png" sizes="144x144">
     <link rel="icon" type="image/png" href="/favicon_512.png" sizes="512x512">
     <link rel="icon" type="image/png" href="/favicon_192.png" sizes="192x192">
     <link rel="manifest" href="manifest.json">
@@ -65,7 +66,7 @@
     </header>
     <main id="about">
       <div class="cover">
-        <p class='about-item onEnter' style='--delay: .32s' tabindex="0" >I'm a UX Engineer based out of Brooklyn NY, looking to design and build digital experiences and products.</p>
+        <p class='about-item onEnter' style='--delay: .32s' tabindex="0" >I'm a UX Engineer based out of Brooklyn NY, who has designed and built digital experiences and products.</p>
         <p class='about-item onEnter' style='--delay: .40s' tabindex="0" >If you need to get in <a aria-labelledby='contact' id='contact' class='link-contact' href="mailto:contact@robertjames.nyc?Subject=Inquiry">contact</a> feel free to reach out.</p>
       </div>
       <div class="cover">
