--- a/work.html
+++ b/work.html
@@ -15,7 +15,7 @@
     <meta name="viewport" content="width=device-width"/>
     <meta name="disabled-adaptations" content="watch"/>
     <meta name="Description" content="Robert James - A UX Engineer based out of Brooklyn, looking to design and build digital experiences and products"/>
-    <title>Robert James</title>
+    <title>Work / Portfolio</title>
     <meta property="og:title" content="Robert James"/>
     <meta property="og:type" content="website"/>
     <meta property="og:url" content="http:robertjames.nyc"/>
@@ -57,7 +57,7 @@
       </symbol>  
     </svg>
     <header class="header">
-      <h1 tabindex="0"><a href="/index.html">robert james</a></h1>
+      <h1 tabindex="0"><a href="index.html">robert james</a></h1>
       <nav>
         <ul>
           <li><a href="work.html">work</a></li>
@@ -66,8 +66,18 @@
     </header>
     <main id="about">
       <div class="cover">
-        <p class="about-item onEnter" style="--delay: .32s" tabindex="0">I'm a UX Engineer who has designs and builds digital experiences and products.</p>
-        <p class="about-item onEnter" style="--delay: .40s" tabindex="0">If you need to get in <a aria-labelledby="contact" id="contact" class="link-contact" href="mailto:contact@robertjames.nyc?Subject=Inquiry">contact</a> feel free to reach out.</p>
+        <p  id='work' class='about-item onEnter' style='--delay: .36s' tabindex="0" >I have worked on digital products for 
+          <span class="'brands">
+            <span class='brand'>SBE</span> <span>&sdot;</span>
+            <span class='brand'>Guardian</span> <span>&sdot;</span>
+            <span class='brand'>MacMillan</span> <span>&sdot;</span>
+            <span class='brand'>Weber Shandwick</span> <span>&sdot;</span>
+            <span class='brand'>Royal Caribbean</span> <span>&sdot;</span>
+            <span class='brand'>Microsoft</span> <span>&sdot;</span>
+            <span class='brand'>Bank of America</span> <span>&sdot;</span>
+            <span class='brand'>Corteva</span>.
+          </span>
+        </p>
       </div>
     </main>
     <footer class="footer-menu">
