--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     </header>
     <main id="about">
       <div class="cover">
-        <p class="about-item onEnter" style="--delay: .32s" tabindex="0">I'm a UX Engineer who has designs and builds digital experiences and products.</p>
+        <p class="about-item onEnter" style="--delay: .32s" tabindex="0">I'm a UX Engineer who designs and builds digital experiences and products.</p>
       </div>
       <div class="cover">
         <p class="about-item onEnter" style="--delay: .40s" tabindex="0">If you need to get in <a aria-labelledby="contact" id="contact" class="link-contact" href="mailto:contact@robertjames.nyc?Subject=Inquiry">contact</a> feel free to reach out.</p>
