fix a11y on UL -> LI

--- a/work.html
+++ b/work.html
@@ -86,8 +86,8 @@
       </div>
     </main>
     <footer class="footer-menu">
-      <ul>
-        <li class="footer-menu--item onEnter" style='--delay: .54s' role='list'>
+      <ul role="list">
+        <li class="footer-menu--item onEnter" style='--delay: .54s' role='listitem'>
           <a href="https://www.linkedin.com/in/robertmajames" class="linkedIn" target="_blank" rel="noopener">
             <svg 
               id="icon-linkedIn"
@@ -101,7 +101,7 @@
             <p class='icon-text'>LinkedIn</p>
           </a>
         </li>
-        <li class="footer-menu--item onEnter" style='--delay: .5s'>
+        <li class="footer-menu--item onEnter" style='--delay: .5s' role='listitem'>
           <a href="https://github.com/rmjames" class="github" target="_blank" rel="noopener">
             <svg
               id="icon-github"
@@ -115,7 +115,7 @@
             <p class='icon-text'>Github</p>
           </a>
         </li>
-        <li class="footer-menu--item">
+        <li class="footer-menu--item" role='listitem'>
           <a href="https://codepen.io/rmjames/" class="codepen" target="_blank" rel="noopener">
             <svg
               id="icon-codepen"
@@ -131,7 +131,7 @@
             <p>Codepen</p>
           </a>
         </li>
-        <li class="footer-menu--item onEnter" style='--delay: .48s'>
+        <li class="footer-menu--item onEnter" style='--delay: .48s' role='listitem'>
           <a href="https://twitter.com/bkrjames" class="twitter" target="_blank" rel="noopener">
             <svg
               id="icon-twiter"
@@ -145,7 +145,7 @@
             <p class='icon-text'>X</p>
           </a>
         </li>
-        <li class="footer-menu--item onEnter" style='--delay: .44s'>
+        <li class="footer-menu--item onEnter" style='--delay: .44s' role='listitem'>
           <a href="mailto:rma.james@gmail.com?Subject=Inquiry" class="email">
             <svg id="icon-email" role="img" style="width:2em;height:2em" viewBox="0 0 24 24">
               <use href="#email"></use>
