--- a/work.html
+++ b/work.html
@@ -14,7 +14,7 @@
     <meta name="theme-color" content="#dee1e3" media="(prefers-color-scheme: light)" />
     <meta name="viewport" content="width=device-width"/>
     <meta name="disabled-adaptations" content="watch"/>
-    <meta name="Description" content="Robert James - A UX Engineer based out of Brooklyn, looking to design and build digital experiences and products"/>
+    <meta name="Description" content="Robert James - A UX Engineer who designs and builds digital experiences and products"/>
     <title>Work / Portfolio</title>
     <meta property="og:title" content="Robert James"/>
     <meta property="og:type" content="website"/>
