update email & add mpa.css

--- a/index.html
+++ b/index.html
@@ -25,10 +25,12 @@
     <meta name="twitter:card" content="summary_large_image"/>
     <meta name="twitter:image:alt" content="Robert James"/>
     <link rel="preload" href="styles/main.css" as="style">
+    <link rel="preload" href="styles/mpa.css" as="style">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Recursive:wght,CASL,CRSV,MONO@300..1000,0..1,0..1,0..1&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/mpa.css">
     <link rel="icon" type="image/svg+xml" href="images/icon.svg">
     <link rel="apple-touch-icon" href="/images/icon-ios.svg">
     <link rel="icon" type="image/png" href="/favicon_144.png" sizes="144x144">
@@ -74,7 +76,7 @@
         <p class="about-item onEnter" style="--delay: .32s" tabindex="0">I'm a UX Engineer who designs and builds digital experiences and products.</p>
       </div>
       <div class="cover">
-        <p class="about-item onEnter" style="--delay: .40s" tabindex="0">If you need to get in <a aria-labelledby="contact" id="contact" class="link-contact" href="mailto:contact@robertjames.nyc?Subject=Inquiry">contact</a> feel free to reach out.</p>
+        <p class="about-item onEnter" style="--delay: .40s" tabindex="0">If you need to get in <a aria-labelledby="contact" id="contact" class="link-contact" href="mailto:rma.james@gmail.com?Subject=Inquiry">contact</a> feel free to reach out.</p>
       </div>
     </main>
     <footer class="footer-menu">
