--- a/work.html
+++ b/work.html
@@ -25,10 +25,12 @@
     <meta name="twitter:card" content="summary_large_image"/>
     <meta name="twitter:image:alt" content="Robert James"/>
     <link rel="preload" href="styles/main.css" as="style">
+    <link rel="preload" href="styles/mpa.css" as="style">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Recursive:wght,CASL,CRSV,MONO@300..1000,0..1,0..1,0..1&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/mpa.css">
     <link rel="icon" type="image/svg+xml" href="images/favicon.svg">
     <link rel="apple-touch-icon" href="/images/icon-ios.svg">
     <link rel="icon" type="image/png" href="/favicon_144.png" sizes="144x144">
