--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
           </a>
         </li>
       </ul>
-      <p class="copryright">© Robert James 2024</p>
+      <p class="copyright">© Robert James 2024</p>
     </footer>
   </body>
 </html>
