fix alignment & change copy

--- a/work.html
+++ b/work.html
@@ -156,7 +156,7 @@
           </a>
         </li>
       </ul>
-      <p class="copryright">© Robert James 2024</p>
+      <p class="copryright">©Robert James</p>
     </footer>
   </body>
 </html>
